jenkins/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: hello
spec:
  rules:
  - host: echoservice1.kops.hidetake.org
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 8080
  - host: echoservice2.kops.hidetake.org
    http:
      paths:
      - path: /
        backend:
          serviceName: echoserver
          servicePort: 8080
  - host: jenkins.kops.hidetake.org
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
